// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BhAutocomplete.vue focus on input press esc renders correctly 1`] = `
<bhinput-stub>
  <div class="bh-autocomplete">
    <!---->
    <input type="text"> </div>
  <!---->
</bhinput-stub>
`;

exports[`BhAutocomplete.vue focus on input renders correctly 1`] = `
<bhinput-stub>
  <div class="bh-autocomplete">
    <!---->
    <input type="text"> </div>
  <div class="bh-autocomplete__list">
    <button type="button" class="bh-autocomplete__list__item"><strong></strong>a<strong></strong></button>
    <button type="button" class="bh-autocomplete__list__item"><strong></strong>a<strong></strong>b<strong></strong></button>
    <button type="button" class="bh-autocomplete__list__item"><strong></strong>a<strong></strong>b<strong></strong>c<strong></strong>d<strong></strong></button>
    <button type="button" class="bh-autocomplete__list__item"><strong></strong>b<strong></strong></button>
    <button type="button" class="bh-autocomplete__list__item"><strong></strong>c<strong></strong></button>
  </div>
</bhinput-stub>
`;

exports[`BhAutocomplete.vue renders correctly 1`] = `
<bhinput-stub>
  <div class="bh-autocomplete">
    <!---->
    <input type="text"> </div>
  <!---->
</bhinput-stub>
`;
